package com.michel.vkmap.domain.models

import com.yandex.mapkit.mapview.MapView

data class MapViewModel(val mapView: MapView)